Content Section done

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <div
         class="nav flex justify-between p-2 items-center transition ease-linear duration-[0.2s] space-x-"
       >
-        <div class="text-3xl sm:flex mt-3">
+        <div class="text-3xl sm:text-4xl sm:flex mt-3 ml-4">
           <div>Coding</div>
           <div>Blocks</div>
         </div>
-        <div class="middle ml-[4rem] scale-[0.75] sm:scale-[1.]">
+        <div class="middle ml-[2.25rem] scale-[0.75] sm:scale-[1]">
           <input type="checkbox" class="checkbox opacity-0" id="checkbox" />
           <label
             for="checkbox"
@@ -46,7 +46,7 @@
             <li class="cursor-pointer text-xl">Education</li>
           </ul>
         </div>
-        <div class="right mr-[2rem] sm:mr-20 scale-[0.45] sm:scale-[1]">
+        <div class="right mr-[2rem] sm:mr-20 scale-[0.75] sm:scale-[1]">
           <button
             class="bg-[#feba27] mt-5 px-8 py-4 rounded-[50px]"
             style="box-shadow: 0px 25px 45px -10px #ffc70d"
@@ -55,6 +55,72 @@
           </button>
         </div>
       </div>
+
+      <!-- Content section -->
+      <div class="content mt-8 ml-5 sm:flex">
+        <div class="left">
+          <h1 class="text-5xl leading-[85px]">
+            Hy! I Am<br />
+            <span class="text-[#feba27] sm:flex"
+              ><div>Coding</div>
+              <div>Blocks</div></span
+            >
+          </h1>
+          <p class="w-2/3 sm:w-1/2">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+            excepturi aliquam repellendus distinctio vitae.
+          </p>
+          <button
+            class="bg-[#feba27] mt-8 px-6 py-2 rounded-[50px]"
+            style="box-shadow: 0px 25px 45px -10px #ffc70d"
+          >
+            Contact
+          </button>
+
+          <div class="icons mt-[5rem] ml-[60px]">
+            <ul class="text-[#feba27] text-3xl flex space-x-8">
+              <li>
+                <i><i class="fa-brands fa-github"></i></i>
+              </li>
+              <li>
+                <i><i class="fa-brands fa-linkedin-in"></i></i>
+              </li>
+              <li>
+                <i><i class="fa-brands fa-instagram"></i></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="image mt-20 ms:mt-20 pl-[20%]">
+          <img
+            src="./sexy.webp"
+            alt=""
+            class="h-[12rem] w-[12rem] sm:scale-[2] rounded-[50%]"
+          />
+        </div>
+      </div>
+
+      <!-- Flex Section -->
+      <div class="services mt-28 pl-8">
+        <div class="left">
+          <h1 class="text-5xl flex leading-[90px]">
+            <div>My Awesomes <span class="text-[#feba27]">services</span></div>
+          </h1>
+          <p class="w-2/3">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium
+            tempora delectus eligendi?
+          </p>
+        </div>
+        <div class="right ">
+            <div class=""></div>
+            <div></div>
+            <div></div>
+        </div>
+      </div>
+
+
+
     </div>
   </body>
 </html>
