--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div
         class="nav flex justify-around p-2 items-center transition ease-linear sm:ml-[-2rem] duration-[0.2s] space-x-"
       >
-        <div class="text-3xl sm:text-4xl sm:flex mt-3 ml-4">
+        <div class="text-4xl sm:text-4xl sm:flex mt-3 ml-4">
           <div>Coding</div>
           <div>Blocks</div>
         </div>
@@ -40,11 +40,11 @@
         </div>
         <div class="hidden sm:flex">
           <ul class="flex justify-between space-x-8 pt-4">
-            <li class="cursor-pointer text-xl">Home</li>
-            <li class="cursor-pointer text-xl">Servies</li>
-            <li class="cursor-pointer text-xl">Interested</li>
-            <li class="cursor-pointer text-xl">Portfolio</li>
-            <li class="cursor-pointer text-xl">Education</li>
+            <li class="cursor-pointer text-xl hover:text-[#feba27] hover:underline hover:decoration-[#feba27] hover:scale-[1.25]">Home</li>
+            <li class="cursor-pointer text-xl hover:text-[#feba27] hover:underline hover:decoration-[#feba27] hover:scale-[1.25]">Servies</li>
+            <li class="cursor-pointer text-xl hover:text-[#feba27] hover:underline hover:decoration-[#feba27] hover:scale-[1.25]">Interested</li>
+            <li class="cursor-pointer text-xl hover:text-[#feba27] hover:underline hover:decoration-[#feba27] hover:scale-[1.25]">Portfolio</li>
+            <li class="cursor-pointer text-xl  hover:text-[#feba27] hover:underline hover:decoration-[#feba27] hover:scale-[1.25]">Education</li>
           </ul>
         </div>
         <div class="right mr-[2rem] sm:mr-20 scale-[0.75] sm:scale-[1]">
@@ -58,7 +58,7 @@
       </div>
 
       <!-- Content section -->
-      <div class="content mt-8 ml-2 sm:flex sm:ml-[0rem] sm:justify-around">
+      <div class="content mt-10 ml-2 sm:flex sm:ml-[0rem] sm:justify-around">
         <div class="left ml-10">
           <h1 class="text-5xl leading-[85px]">
             Hy! I Am<br />
@@ -82,28 +82,28 @@
             <ul class="text-[#feba27] text-3xl flex space-x-8">
               <li>
                 <a href="https://github.com"
-                  ><i class="fa-2x fa-brands fa-github cursor-pointer"></i
+                  ><i class="fa-2x fa-brands fa-github cursor-pointer hover:text-slate-300"></i
                 ></a>
               </li>
               <li>
                 <a href="https://linkedin.com"
-                  ><i class="fa-2x fa-brands fa-linkedin-in cursor-pointer"></i
+                  ><i class="fa-2x fa-brands fa-linkedin-in cursor-pointer hover:text-blue-500"></i
                 ></a>
               </li>
               <li>
                 <a href="https://www.instagram.com/"
-                  ><i class="fa-2x fa-brands fa-instagram cursor-pointer"></i
+                  ><i class="fa-2x fa-brands fa-instagram cursor-pointer hover:text-pink-400"></i
                 ></a>
               </li>
             </ul>
           </div>
         </div>
 
-        <div class="image mt-20 ms:mt-20 pl-[15%]">
+        <div class="image mt-20 ms:mt-20 pl-[13%]">
           <img
             src="./sexy.webp"
             alt=""
-            class="h-[14rem] sm:mr-[8rem] w-[16rem] sm:scale-[1.2] rounded-[50%]"
+            class="h-[18rem] sm:mr-[10rem] w-[18rem] sm:scale-[1.65] rounded-[50%]"
           />
         </div>
       </div>
@@ -237,7 +237,7 @@
           </div>
           <div>
             <p class="text-center">
-              Lorem <br />
+              Companies <br />
               <span class="text-[#ffd700]">Work</span>
             </p>
           </div>
@@ -260,7 +260,7 @@
           </p>
 
           <button
-            class="mt-10 px-10 py-3 rounded-3xl bg-[#ffc70d]"
+            class="mt-10 px-10 py-3 rounded-3xl bg-[#ffc70d] hover:text-[#ffc70d] hover:bg-white"
             style="box-shadow: 0px 20px 45px -10px #ffc70d"
           >
             Hire Me
@@ -402,7 +402,7 @@
           </div>
           <div><span class="text-white">2015-2019</span></div>
           <div class="visit mt-2">
-            <button class="bg-white rounded-[1.75rem] px-5 py-2 text-[#ffd700]">
+            <button class="bg-white rounded-[1.75rem] px-5 py-2 text-[#ffd700] hover:text-white hover:bg-[#ffd700]">
               Visit
             </button>
           </div>
@@ -418,7 +418,8 @@
             ><span class="text-[#ffd700]">Contact me</span>
           </h1>
         </div>
-        <div class="right flex items-center flex-col mt-10 space-y-8">
+        <div class="right mt-10 flex items-center flex-col space-y-8">
+          <!-- use form tag when learn backend -->
           <input
             type="text"
             class="rounded-lg p-1 sm:scale-[1.2] sm:w-[30rem] text-black"
@@ -431,14 +432,15 @@
           />
           <textarea
             placeholder="Message"
-            class="rounded-lg sm:scale-[1.2] sm:w-[30rem] sm:h-[5rem] text-black"
+            class="rounded-lg p-1 sm:scale-[1.2] sm:w-[30rem] sm:h-[5rem] text-black"
           ></textarea>
           <button
-            class="bg-[#ffd700] w-[5rem] h-[2.5rem] rounded-3xl sm:scale-[1.5]"
+            class="bg-[#ffd700] w-[5rem] h-[2.5rem] rounded-3xl sm:scale-[1.5] hover:bg-white hover:text-[#ffd700] "
             style="box-shadow: 0px 25px 45px -10px #ffc70d"
           >
             Send
           </button>
+        
         </div>
       </div>
     </div>
