--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         </div>
 
         <div
-          class="dabba sm:mt-24 py-6 flex items-center flex-col px-4 mt-[2rem] w-[100vw] sm:w-[500px] h-[200px] border-y-[10px] border-white sm:border-x-[10px] bg-slate-500 text-[#403f3c] sm:rounded-lg"
+          class="dabba sm:mt-24 py-6 flex items-center sm:space-y-4 flex-col px-4 mt-[2rem] w-[100vw] sm:w-[500px] h-[200px] sm:h-[250px] border-y-[10px] border-white sm:border-x-[10px] bg-slate-500 text-[#403f3c] sm:rounded-lg"
         >
           <div>
             <img
